--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-
-# PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost/training
+# Mongo Configuration
+spring.data.mongodb.database=training
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
